# Logger

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  AutomationHatLEDTest_8c.html  AutomationHatLEDTest_8c.js  AutomationHatLEDTest_8c__incl.map  AutomationHatLEDTest_8c__incl.md5  AutomationHatLEDTest_8c_source.html  AutomationHatRead_8c.html  AutomationHatRead_8c.js  AutomationHatRead_8c__incl.map  AutomationHatRead_8c__incl.md5  AutomationHatRead_8c_source.html  BUILDING.txt  CMakeLists.txt  COPYRIGHT.txt  CodeGroups.html  DWHexPairs_8c.html  DWHexPairs_8c.js  DWHexPairs_8c__incl.map  DWHexPairs_8c__incl.md5  DWHexPairs_8c_source.html  DWMessages_8c_source.html  DWMessages_8h.html  DWMessages_8h.js  DWMessages_8h__dep__incl.map  DWMessages_8h__dep__incl.md5  DWMessages_8h__incl.map  DWMessages_8h__incl.md5  DWMessages_8h_source.html  DWRead_8c.html  DWRead_8c.js  DWRead_8c__incl.map  DWRead_8c__incl.md5  DWRead_8c_source.html  DWSample_8c.html  DWSample_8c.js  DWSample_8c__incl.map  DWSample_8c__incl.md5  (+1486 more)
.github/workflows/: cmake.yml  doxygen-pages.yml  python.yml
GPS/: CMakeLists.txt  GPSCommands.c  GPSCommands.h  GPSMessages.c  GPSMessages.h  GPSSerial.c  GPSSerial.h  GPSTypes.c  GPSTypes.h
base/: CMakeLists.txt  logging.c  logging.h  messages.c  messages.h  queue.c  queue.h  strarray.c  strarray.h
docs/: CMakeLists.txt  build_man_page.sh  config_spec.md  groups.md  index.md  programs-core.md  programs-dproc.md  programs-test.md  programs.md
docs/guide/: DProc.md  Logger-Concepts.md  Logger-Config-Core.md  Logger-Config-Sources.md  Logger-Config.md  Logger-Files.md  Logger-Hardware.md  Logger-TechDetails.md  Logger.md  SLConvertGUI.md  SLExtractGUI.md
docs/images/: MessageSequence.eps  MessageStructure.eps
docs/manual/: ExtractSatInfo.md  ExtractSource.md  LPMSRead.md  N2KClassify.md  N2KRead.md  SLClassify.md  SLConvert.md  SLConvertGUI.md  SLExtract.md  SLExtractGUI.md  SLGPSWatch.md  SLVarWatch.md  TestUtilities.md
ext/: CMakeLists.txt
logger/: CMakeLists.txt  Logger.c  Logger.h.in  LoggerConfig.c  LoggerConfig.h  LoggerDMap.c  LoggerDMap.h  LoggerDW.c  LoggerDW.h  LoggerGPS.c  LoggerGPS.h  LoggerI2C.c  LoggerI2C.h  LoggerLPMS.c  LoggerLPMS.h  LoggerMP.c  LoggerMP.h  LoggerMQTT.c  LoggerMQTT.h  LoggerN2K.c  LoggerN2K.h  LoggerNMEA.c  LoggerNMEA.h  LoggerNet.c  LoggerNet.h  LoggerSerial.c  LoggerSerial.h  LoggerSignals.c  LoggerSignals.h  LoggerTime.c  LoggerTime.h
python/: cx-setup.py  setup.py  setup_common.py
python/SELKIELogger/: N2KMessages.py  Processes.py  PushoverClient.py  SLFiles.py  SLMessages.py  Specs.py  __init__.py
python/SELKIELogger/WebInterface/: __init__.py  autohat.py  pages.py
python/SELKIELogger/WebInterface/templates/: autohat.html  data.html  index.html  map.html  selkie_base.html  state.html
python/SELKIELogger/scripts/: N2KConvert.py  N2KDump.py  SLClassify.py  SLConvert.py  SLDump.py  SLExtract.py  SLGPSWatch.py  SLGUI.py  SLIcinga.py  SLSerialLog.py  SLVarWatch.py  SLView.py  __init__.py
python/SELKIELogger/scripts/GUI/: N2KConvert.py  SLConvert.py  SLExtract.py  __init__.py  apps.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+98 more)
src/: AutomationHatLEDTest.c  AutomationHatRead.c  CMakeLists.txt  DWRead.c  ExtractSatInfo.c  ExtractSource.c  Logger.c  Logger.h.in  LoggerConfig.c  LoggerConfig.h  LoggerDMap.c  LoggerDMap.h  LoggerGPS.c  LoggerGPS.h  LoggerI2C.c  LoggerI2C.h  LoggerMP.c  LoggerMP.h  LoggerMQTT.c  LoggerMQTT.h  LoggerNMEA.c  LoggerNMEA.h  LoggerNet.c  LoggerNet.h  LoggerSignals.c  LoggerSignals.h  LoggerTime.c  LoggerTime.h  MQTTTest.c  PowerHatRead.c  dat2csv.c
tests/: CMakeLists.txt  DWHexPairs.c  DWSample.c  DWTestSample.hxv  LPMSMessagesFromFile.c  MPMessagesFromFile.c  MPTests.c  NMEAChecksumTest.c  NMEAMessagesFromFile.c  QueueTest.c  SATests.c  UBXChecksumTest.c  UBXMessagesFromFile.c  logTests.c
utils/: AutomationHatLEDTest.c  AutomationHatRead.c  CMakeLists.txt  DWRead.c  DumpMessages.c  ExtractSatInfo.c  ExtractSource.c  LPMSRead.c  LPMSTest.c  MQTTTest.c  N2KClassify.c  N2KRead.c  PowerHatRead.c  dat2csv.c
